--- a/src/components/Lowstock.css
+++ b/src/components/Lowstock.css
@@ -5,6 +5,8 @@
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+    border-radius: 4px;
+    margin-bottom: 4px;
   }
   
   /* Style for a form input */
@@ -57,10 +59,12 @@ button {
   
   /* Add a background color and a hover effect */
   button {
+   
     background-color: #4CAF50;
     color: white;
     border-radius: 4px;
     transition: background-color 0.3s;
+    margin-left: 46%
   }
   
   button:hover {
@@ -76,5 +80,11 @@ button {
   /* Add a gradient to the background */
   button {
     background: linear-gradient(to bottom, #4CAF50 0%, #2E8B57 100%);
+  }
+
+  .img-styling{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
   
